--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
-<script src="https://developers.kakao.com/sdk/js/kakao.min.js" type="text/javascript"></script>
-<script>
-Kakao.init('73032267919c26089508e1d09b8125b8');
-Kakao.Link.createCustomButton({
-  container: '#kakao-link-btn',
-  templateId: 27733,
-  templateArgs: {
-    'title': 'Hello',
-    'description': 'World'
-  }
-});
-</script>
+<html>
+  <body>
+    Hello world.
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js" type="text/javascript"></script>
+    <script>
+    Kakao.init('73032267919c26089508e1d09b8125b8');
+    Kakao.Link.createCustomButton({
+      container: '#kakao-link-btn',
+      templateId: 27733,
+      templateArgs: {
+        'title': 'Hello',
+        'description': 'World'
+      }
+    });
+    </script>
+  </body>
+</html>
