--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!doctype html>
 <html>
+  <head>
+    <meta http-equiv="Cache-Control" content="no-store, no-cache" />
+    <meta http-equiv="Pragma" content="no-store, no-cache" />
+  </head>
   <body>
     Hello world.
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js" type="text/javascript"></script>
     <script>
-    Kakao.init('73032267919c26089508e1d09b8125b8');
-    Kakao.Link.createCustomButton({
-      container: '#kakao-link-btn',
-      templateId: 27733,
-      templateArgs: {
-        'title': 'Hello',
-        'description': 'World'
-      }
-    });
+      Kakao.init('73032267919c26089508e1d09b8125b8');
+      console.log(Kakao.isInitialized());
+      Kakao.Link.createCustomButton({
+        container: '#kakao-link-btn',
+        templateId: 27733,
+        templateArgs: {
+          'title': 'Hello',
+          'description': 'World'
+        }
+      });
     </script>
   </body>
 </html>
