--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         content: {
           title: 'Test',
           description: 'for ???',
+          imageUrl: '',
+          imageWidth: 0,
+          imageHeight: 0,
+          link: '',
         },
         buttons: [
           {
