--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
           imageUrl: '',
           imageWidth: 0,
           imageHeight: 0,
-          link: '',
+          link: {
+            webUrl: '',
+            mobileWebUrl: '',
+            androidExecParams: '',
+            iosExecParams: '',
+          },
         },
         buttons: [
           {
